<resources>
    <string name="app_name">Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_all">AC</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="menu_save_result">Save Result</string>
    <string name="menu_clean_result">Clean Result</string>
    <string name="message_nullView">must implement onViewSelected!</string>
    <string name="message_expression_error">Enter the wrong expression</string>
    <string name="text_result_error">Expression error</string>
    <string name="operator_present">%</string>
    <string name="operator_plus_minus">+/-</string>
    <string name="operator_div">/</string>
    <string name="operator_mul">x</string>
    <string name="operator_sub">-</string>
    <string name="operator_add">+</string>
    <string name="operator_dot">.</string>
    <string name="operator_result">=</string>
</resources>
